--- a/src/main/resources/assets/basemetals/lang/it_IT.lang
+++ b/src/main/resources/assets/basemetals/lang/it_IT.lang
@@ -440,3 +440,87 @@ item.basemetals.wood_crackhammer.name=Mazza di Legno
 item.basemetals.stone_crackhammer.name=Mazza Stone
 
 item.bucket.mercury=Secchio di Mercurio
+
+item.basemetals.human_detector.name=Security Pressure Plate
+
+achievement.cupronickel_maker.desc=Combine powdered copper and nickel to make cupronickel
+
+item.basemetals.cubronickel_axe.name=Nichel-Rame Ascia
+item.basemetals.cubronickel_bars.name=Nichel-Rame Barra
+item.basemetals.cubronickel_blend.name=Nichel-Rame Miscela
+item.basemetals.cubronickel_block.name=Nichel-Rame Cubo
+item.basemetals.cubronickel_boots.name=Nichel-Rame Stivali
+item.basemetals.cubronickel_chestplate.name=Nichel-Rame Corazza
+item.basemetals.cubronickel_crackhammer.name=Nichel-Rame Mazza
+item.basemetals.cubronickel_door.name=Nichel-Rame Porta
+item.basemetals.cubronickel_helmet.name=Nichel-Rame Casco
+item.basemetals.cubronickel_hoe.name=Nichel-Rame Zappare
+item.basemetals.cubronickel_ingot.name=Nichel-Rame Lingotto
+item.basemetals.cubronickel_leggings.name=Nichel-Rame Pantaloni
+item.basemetals.cubronickel_nugget.name=Nichel-Rame Sassolino
+item.basemetals.cubronickel_pickaxe.name=Nichel-Rame Piccone
+item.basemetals.cubronickel_powder.name=Polvere Nichel-Rame
+item.basemetals.cubronickel_shovel.name=Nichel-Rame Pala
+item.basemetals.cubronickel_sword.name=Nichel-Rame Spada
+item.basemetals.cubronickel_trapdoor.name=Nichel-Rame Fuori Porta
+
+item.basemetals.platinum_axe.name=Platino Ascia
+item.basemetals.platinum_bars.name=Platino Barra
+item.basemetals.platinum_block.name=Platino Cubo
+item.basemetals.platinum_boots.name=Platino Stivali
+item.basemetals.platinum_chestplate.name=Platino Corazza
+item.basemetals.platinum_crackhammer.name=Platino Mazza
+item.basemetals.platinum_door.name=Platino Porta
+item.basemetals.platinum_helmet.name=Platino Casco
+item.basemetals.platinum_hoe.name=Platino Zappare
+item.basemetals.platinum_ingot.name=Platino Lingotto
+item.basemetals.platinum_leggings.name=Platino Pantaloni
+item.basemetals.platinum_nugget.name=Platino Sassolino
+item.basemetals.platinum_ore.name=Platino Minerale
+item.basemetals.platinum_pickaxe.name=Platino Piccone
+item.basemetals.platinum_powder.name=Polvere Platino
+item.basemetals.platinum_shovel.name=Platino Pala
+item.basemetals.platinum_sword.name=Platino Spada
+item.basemetals.platinum_trapdoor.name=Platino Fuori Porta
+
+item.basemetals.adamantine_rod.name=Adamantio Asta
+item.basemetals.aquarium_rod.name=Pesce-Acciaio Asta
+item.basemetals.brass_rod.name=Ottone Asta
+item.basemetals.bronze_rod.name=Bronzo Asta
+item.basemetals.coldiron_rod.name=Ferro-Freddo Asta
+item.basemetals.copper_rod.name=Rame Asta
+item.basemetals.cupronickel_rod.name=Nichel-Rame Asta
+item.basemetals.electrum_rod.name=Lega di Rame Asta
+item.basemetals.gold_rod.name=Oro Asta
+item.basemetals.invar_rod.name=Invar Asta
+item.basemetals.iron_rod.name=Ferro Asta
+item.basemetals.lead_rod.name=Piombo Asta
+item.basemetals.mithril_rod.name=Mithril Asta
+item.basemetals.nickel_rod.name=Nichel Asta
+item.basemetals.platinum_rod.name=Platino Asta
+item.basemetals.silver_rod.name=Argento Asta
+item.basemetals.starsteel_rod.name=Ferro-Stelle Asta
+item.basemetals.steel_rod.name=Acciaio Asta
+item.basemetals.tin_rod.name=Latta Asta
+item.basemetals.zinc_rod.name=Zinco Asta
+
+item.basemetals.adamantine_gear.name=Adamantio Ingranaggio
+item.basemetals.aquarium_gear.name=Pesce-Acciaio Ingranaggio
+item.basemetals.brass_gear.name=Ottone Ingranaggio
+item.basemetals.bronze_gear.name=Bronzo Ingranaggio
+item.basemetals.coldiron_gear.name=Ferro-Freddo Ingranaggio
+item.basemetals.copper_gear.name=Rame Ingranaggio
+item.basemetals.cupronickel_gear.name=Nichel-Rame Ingranaggio
+item.basemetals.electrum_gear.name=Lega di Rame Ingranaggio
+item.basemetals.gold_gear.name=Oro Ingranaggio
+item.basemetals.invar_gear.name=Invar Ingranaggio
+item.basemetals.iron_gear.name=Ferro Ingranaggio
+item.basemetals.lead_gear.name=Piombo Ingranaggio
+item.basemetals.mithril_gear.name=Mithril Ingranaggio
+item.basemetals.nickel_gear.name=Nichel Ingranaggio
+item.basemetals.platinum_gear.name=Platino Ingranaggio
+item.basemetals.silver_gear.name=Argento Ingranaggio
+item.basemetals.starsteel_gear.name=Ferro-Stelle Ingranaggio
+item.basemetals.steel_gear.name=Acciaio Ingranaggio
+item.basemetals.tin_gear.name=Latta Ingranaggio
+item.basemetals.zinc_gear.name=Zinco Ingranaggio
