--- a/src/main/resources/assets/basemetals/lang/nl_NL.lang
+++ b/src/main/resources/assets/basemetals/lang/nl_NL.lang
@@ -434,3 +434,96 @@ item.basemetals.wood_crackhammer.name=Houten Breek Hamer
 item.basemetals.stone_crackhammer.name=Stenen Breek Hamer
 
 item.bucket.mercury=Emmer met Kwik
+
+item.basemetals.human_detector.name=Security Pressure Plate
+
+achievement.cupronickel_maker.desc=Combine powdered copper and nickel to make cupronickel
+
+item.basemetals.cupronickel_axe.name=Cupronickel Axe
+item.basemetals.cupronickel_bars.name=Cupronickel Bars
+item.basemetals.cupronickel_blend.name=Cupronickel Blend
+item.basemetals.cupronickel_block.name=Cupronickel Block
+item.basemetals.cupronickel_boots.name=Cupronickel Boots
+item.basemetals.cupronickel_chestplate.name=Cupronickel Chestplate
+item.basemetals.cupronickel_crackhammer.name=Cupronickel Crack Hammer
+item.basemetals.cupronickel_door.name=Cupronickel Door
+item.basemetals.cupronickel_helmet.name=Cupronickel Helmet
+item.basemetals.cupronickel_hoe.name=Cupronickel Hoe
+item.basemetals.cupronickel_ingot.name=Cupronickel Ingot
+item.basemetals.cupronickel_leggings.name=Cupronickel Leg Armor
+item.basemetals.cupronickel_nugget.name=Cupronickel Nugget
+item.basemetals.cupronickel_pickaxe.name=Cupronickel Pickaxe
+item.basemetals.cupronickel_powder.name=Powdered Cupronickel
+item.basemetals.cupronickel_shovel.name=Cupronickel Shovel
+item.basemetals.cupronickel_sword.name=Cupronickel Sword
+item.basemetals.cupronickel_trapdoor.name=Cupronickel Trapdoor
+tile.basemetals.cupronickel_bars.name=Cupronickel Bars
+tile.basemetals.cupronickel_block.name=Cupronickel Block
+tile.basemetals.cupronickel_door.name=Cupronickel Door
+tile.basemetals.cupronickel_trapdoor.name=Cupronickel Trapdoor
+
+item.basemetals.platinum_axe.name=Platinum Axe
+item.basemetals.platinum_bars.name=Platinum Bars
+item.basemetals.platinum_block.name=Platinum Block
+item.basemetals.platinum_boots.name=Platinum Boots
+item.basemetals.platinum_chestplate.name=Platinum Chestplate
+item.basemetals.platinum_crackhammer.name=Platinum Crack Hammer
+item.basemetals.platinum_door.name=Platinum Door
+item.basemetals.platinum_helmet.name=Platinum Helmet
+item.basemetals.platinum_hoe.name=Platinum Hoe
+item.basemetals.platinum_ingot.name=Platinum Ingot
+item.basemetals.platinum_leggings.name=Platinum Leg Armor
+item.basemetals.platinum_nugget.name=Platinum Nugget
+item.basemetals.platinum_ore.name=Platinum Ore
+item.basemetals.platinum_pickaxe.name=Platinum Pickaxe
+item.basemetals.platinum_powder.name=Powdered Platinum
+item.basemetals.platinum_shovel.name=Platinum Shovel
+item.basemetals.platinum_sword.name=Platinum Sword
+item.basemetals.platinum_trapdoor.name=Platinum Trapdoor
+tile.basemetals.platinum_bars.name=Platinum Bars
+tile.basemetals.platinum_block.name=Platinum Block
+tile.basemetals.platinum_door.name=Platinum Door
+tile.basemetals.platinum_ore.name=Platinum Ore
+tile.basemetals.platinum_trapdoor.name=Platinum Trapdoor
+
+item.basemetals.adamantine_rod.name=Adamantine Rod
+item.basemetals.aquarium_rod.name=Aquarium Rod
+item.basemetals.brass_rod.name=Brass Rod
+item.basemetals.bronze_rod.name=Bronze Rod
+item.basemetals.coldiron_rod.name=Cold-Iron Rod
+item.basemetals.copper_rod.name=Copper Rod
+item.basemetals.cupronickel_rod.name=Cupronickel Rod
+item.basemetals.electrum_rod.name=Electrum Rod
+item.basemetals.gold_rod.name=Gold Rod
+item.basemetals.invar_rod.name=Invar Rod
+item.basemetals.iron_rod.name=Iron Rod
+item.basemetals.lead_rod.name=Lead Rod
+item.basemetals.mithril_rod.name=Mithril Rod
+item.basemetals.nickel_rod.name=Nickel Rod
+item.basemetals.platinum_rod.name=Platinum Rod
+item.basemetals.silver_rod.name=Silver Rod
+item.basemetals.starsteel_rod.name=Star-Steel Rod
+item.basemetals.steel_rod.name=Steel Rod
+item.basemetals.tin_rod.name=Tin Rod
+item.basemetals.zinc_rod.name=Zinc Rod
+
+item.basemetals.adamantine_gear.name=Adamantine Gear
+item.basemetals.aquarium_gear.name=Aquarium Gear
+item.basemetals.brass_gear.name=Brass Gear
+item.basemetals.bronze_gear.name=Bronze Gear
+item.basemetals.coldiron_gear.name=Cold-Iron Gear
+item.basemetals.copper_gear.name=Copper Gear
+item.basemetals.cupronickel_gear.name=Cupronickel Gear
+item.basemetals.electrum_gear.name=Electrum Gear
+item.basemetals.gold_gear.name=Gold Gear
+item.basemetals.invar_gear.name=Invar Gear
+item.basemetals.iron_gear.name=Iron Gear
+item.basemetals.lead_gear.name=Lead Gear
+item.basemetals.mithril_gear.name=Mithril Gear
+item.basemetals.nickel_gear.name=Nickel Gear
+item.basemetals.platinum_gear.name=Platinum Gear
+item.basemetals.silver_gear.name=Silver Gear
+item.basemetals.starsteel_gear.name=Star-Steel Gear
+item.basemetals.steel_gear.name=Steel Gear
+item.basemetals.tin_gear.name=Tin Gear
+item.basemetals.zinc_gear.name=Zinc Gear
