--- a/src/main/resources/assets/basemetals/lang/zh_CN.lang
+++ b/src/main/resources/assets/basemetals/lang/zh_CN.lang
@@ -433,3 +433,96 @@ item.basemetals.wood_crackhammer.name=木质破裂锤
 item.basemetals.stone_crackhammer.name=石质破裂锤
 
 item.bucket.mercury=汞桶
+
+item.basemetals.human_detector.name=安全壓盤
+
+achievement.cupronickel_maker.desc=混合粉末的銅和鎳，使銅鎳合金
+
+item.basemetals.cupronickel_axe.name=白銅斧
+item.basemetals.cupronickel_bars.name=白銅欄杆
+item.basemetals.cupronickel_blend.name=白銅粉
+item.basemetals.cupronickel_block.name=白銅磚
+item.basemetals.cupronickel_boots.name=白銅靴子
+item.basemetals.cupronickel_chestplate.name=白銅胸甲
+item.basemetals.cupronickel_crackhammer.name=白銅破裂錘
+item.basemetals.cupronickel_door.name=白銅門
+item.basemetals.cupronickel_helmet.name=白銅頭盔
+item.basemetals.cupronickel_hoe.name=白銅鋤
+item.basemetals.cupronickel_ingot.name=白銅錠
+item.basemetals.cupronickel_leggings.name=白銅護腿
+item.basemetals.cupronickel_nugget.name=白銅粒
+item.basemetals.cupronickel_pickaxe.name=白銅稿
+item.basemetals.cupronickel_powder.name=白銅粉
+item.basemetals.cupronickel_shovel.name=白銅鏟
+item.basemetals.cupronickel_sword.name=白銅劍
+item.basemetals.cupronickel_trapdoor.name=白銅地板門
+tile.basemetals.cupronickel_bars.name=白銅欄杆
+tile.basemetals.cupronickel_block.name=白銅磚
+tile.basemetals.cupronickel_door.name=白銅門
+tile.basemetals.cupronickel_trapdoor.name=白銅地板門
+
+item.basemetals.platinum_axe.name=鉑斧
+item.basemetals.platinum_bars.name=鉑欄杆
+item.basemetals.platinum_block.name=鉑磚
+item.basemetals.platinum_boots.name=鉑靴子
+item.basemetals.platinum_chestplate.name=鉑胸甲
+item.basemetals.platinum_crackhammer.name=鉑破裂錘
+item.basemetals.platinum_door.name=鉑門
+item.basemetals.platinum_helmet.name=鉑頭盔
+item.basemetals.platinum_hoe.name=鉑鋤
+item.basemetals.platinum_ingot.name=鉑錠
+item.basemetals.platinum_leggings.name=鉑護腿
+item.basemetals.platinum_nugget.name=鉑粒
+item.basemetals.platinum_ore.name=鉑礦石
+item.basemetals.platinum_pickaxe.name=鉑稿
+item.basemetals.platinum_powder.name=鉑粉
+item.basemetals.platinum_shovel.name=鉑鏟
+item.basemetals.platinum_sword.name=鉑劍
+item.basemetals.platinum_trapdoor.name=鉑地板門
+tile.basemetals.platinum_bars.name=鉑欄杆
+tile.basemetals.platinum_block.name=鉑磚
+tile.basemetals.platinum_door.name=鉑門
+tile.basemetals.platinum_ore.name=鉑礦石
+tile.basemetals.platinum_trapdoor.name=鉑地板門
+
+item.basemetals.adamantine_rod.name=精金棒
+item.basemetals.aquarium_rod.name=精金棒
+item.basemetals.brass_rod.name=黃銅棒
+item.basemetals.bronze_rod.name=青銅棒
+item.basemetals.coldiron_rod.name=寒鐵棒
+item.basemetals.copper_rod.name=銅棒
+item.basemetals.cupronickel_rod.name=白銅棒
+item.basemetals.electrum_rod.name=琥珀金棒
+item.basemetals.gold_rod.name=金棒
+item.basemetals.invar_rod.name=殷鋼棒
+item.basemetals.iron_rod.name=鐵棒
+item.basemetals.lead_rod.name=鉛棒
+item.basemetals.mithril_rod.name=秘銀棒
+item.basemetals.nickel_rod.name=鎳棒
+item.basemetals.platinum_rod.name=鉑棒
+item.basemetals.silver_rod.name=銀棒
+item.basemetals.starsteel_rod.name=星鋼棒
+item.basemetals.steel_rod.name=鋼棒
+item.basemetals.tin_rod.name=錫棒
+item.basemetals.zinc_rod.name=鋅棒
+
+item.basemetals.adamantine_gear.name=精金齒輪
+item.basemetals.aquarium_gear.name=精金齒輪
+item.basemetals.brass_gear.name=黃銅齒輪
+item.basemetals.bronze_gear.name=青銅齒輪
+item.basemetals.coldiron_gear.name=寒鐵齒輪
+item.basemetals.copper_gear.name=銅齒輪
+item.basemetals.cupronickel_gear.name=白銅齒輪
+item.basemetals.electrum_gear.name=琥珀金齒輪
+item.basemetals.gold_gear.name=金齒輪
+item.basemetals.invar_gear.name=殷鋼齒輪
+item.basemetals.iron_gear.name=鐵齒輪
+item.basemetals.lead_gear.name=鉛齒輪
+item.basemetals.mithril_gear.name=秘銀齒輪
+item.basemetals.nickel_gear.name=鎳齒輪
+item.basemetals.platinum_gear.name=鉑齒輪
+item.basemetals.silver_gear.name=銀齒輪
+item.basemetals.starsteel_gear.name=星鋼齒輪
+item.basemetals.steel_gear.name=鋼齒輪
+item.basemetals.tin_gear.name=錫齒輪
+item.basemetals.zinc_gear.name=鋅齒輪
