--- a/src/main/resources/assets/basemetals/lang/de_DE.lang
+++ b/src/main/resources/assets/basemetals/lang/de_DE.lang
@@ -417,7 +417,7 @@ achievement.geologist.desc=Mache einen Hammer aus einem Metallblock
 achievement.brass_maker.desc=Kombiniere Pulverisiertes Kupfer und Zink, um Messing herzustellen
 achievement.bronze_maker.desc=Kombiniere Pulverisiertes Kupfer und Zinn, um Bronze herzustellen
 achievement.electrum_maker.desc=Kombiniere Pulverisiertes Silber und Gold, um Elektrum herzustellen
-achievement.steel_maker.desc=Kombiniere Pulverisiertes Eisen und Holzkohle, um Stahl herzustellen
+achievement.steel_maker.desc=Kombiniere Pulverisiertes Eisen und Pulverisiertes Holzkohle, um Stahl herzustellen
 achievement.invar_maker.desc=Kombiniere Pulverisiertes Eisen und Nickel, um Invar herzustellen
 achievement.mithril_maker.desc=Kombiniere Pulverisiertes Silber und Kalteisen, um Quecksilber herzustellen
 achievement.aquarium_maker.desc=Kombiniere Pulverisiertes Kupfer und Zink mit Prismarinkristallen, um Aquarium herzustellen
