--- a/src/main/resources/assets/basemetals/lang/en_PT.lang
+++ b/src/main/resources/assets/basemetals/lang/en_PT.lang
@@ -416,7 +416,7 @@ achievement.geologist.desc=Make a hammer from a metal block
 achievement.brass_maker.desc=Combine powdered copper and zinc to make brass
 achievement.bronze_maker.desc=Combine powdered copper and tin to make bronze
 achievement.electrum_maker.desc=Combine powdered silver and gold to make electrum
-achievement.steel_maker.desc=Combine powdered iron and charcoal to make steel
+achievement.steel_maker.desc=Combine powdered iron and powdered charcoal to make steel
 achievement.invar_maker.desc=Combine powdered iron and nickel to make invar
 achievement.mithril_maker.desc=Combine powdered silver, devil-iron and mercury to make ghost silver
 achievement.aquarium_maker.desc=Combine powdered copper and zinc with prismarine crystals to make fish-steel
