--- a/src/main/resources/assets/basemetals/lang/es_ES.lang
+++ b/src/main/resources/assets/basemetals/lang/es_ES.lang
@@ -417,7 +417,7 @@ achievement.geologist.desc=Fabrica una almádena de un bloque de metal
 achievement.brass_maker.desc=Combina polvo de cobre y zinc para hacer latón
 achievement.bronze_maker.desc=Combina polvo cobre y estaño para hacer bronce
 achievement.electrum_maker.desc=Combina polvo plata y oro para hacer electrio
-achievement.steel_maker.desc=Combina polvo de hierro y carbón para fabricar acero
+achievement.steel_maker.desc=Combina polvo de hierro y polvo de carbón para fabricar acero
 achievement.invar_maker.desc=Combina polvo de hierro y níquel para hacer invar
 achievement.mithril_maker.desc=Combina polvo de plata, glacierro y mercurio para hacer mithril
 achievement.aquarium_maker.desc=Combina polvo de cobre y zinc con cristales de prismarina para hacer aquaranio
