--- a/src/main/resources/assets/basemetals/lang/pt_BR.lang
+++ b/src/main/resources/assets/basemetals/lang/pt_BR.lang
@@ -417,7 +417,7 @@ achievement.geologist.desc=Faça um martelo a partir de um bloco de metal
 achievement.brass_maker.desc=Combine cobre e zinco em pó para fazer bronze
 achievement.bronze_maker.desc=Combine cobre em pó e estanho para fazer o bronze
 achievement.electrum_maker.desc=Combine prata em pó e ouro para fazer electrum
-achievement.steel_maker.desc=Combine ferro em pó e carvão para produzir aço
+achievement.steel_maker.desc=Combine ferro em pó e carvão em pó para produzir aço
 achievement.invar_maker.desc=Combine pó de ferro e níquel para fazer invar
 achievement.mithril_maker.desc=Combine prata em pó, ferro-frio e mercúrio para fazer mithril
 achievement.aquarium_maker.desc=Combine cobre e zinco em pó com cristais prismarine para fazer aquário
