TODO: retest custom hammer recipes

--- a/src/main/resources/assets/basemetals/lang/de_DE.lang
+++ b/src/main/resources/assets/basemetals/lang/de_DE.lang
@@ -368,18 +368,21 @@ tile.basemetals.brass_plate.name=Messingplatte
 tile.basemetals.bronze_plate.name=Bronzeplatte
 tile.basemetals.coldiron_plate.name=Kalteisenplatte
 tile.basemetals.copper_plate.name=Kupferplatte
+tile.basemetals.cupronickel_plate.name=Kupfernickelplatte
 tile.basemetals.electrum_plate.name=Elektrumplatte
 tile.basemetals.invar_plate.name=Invarplatte
 tile.basemetals.lead_plate.name=Bleiplatte
 tile.basemetals.mithril_plate.name=Mithrilplatte
 tile.basemetals.nickel_plate.name=Nickelplatte
+tile.basemetals.platinum_plate.name=Platinplatte
 tile.basemetals.silver_plate.name=Silberplatte
 tile.basemetals.starsteel_plate.name=Sternstahlplatte
 tile.basemetals.steel_plate.name=Stahlplatte
 tile.basemetals.tin_plate.name=Zinnplatte
 tile.basemetals.zinc_plate.name=Zinkplatte
-tile.basemetals.iron_plate.name=Ironplatte
+tile.basemetals.iron_plate.name=Eisenplatte
 tile.basemetals.gold_plate.name=Goldplatte
+
 
 
 tooltip.adamantine.tool=+%x Schaden gegen zähe Gegner
@@ -389,17 +392,17 @@ tooltip.mithril.tool=Erblindet und verdorrt Untote
 tooltip.starsteel.tool=Repariert 1 Schaden alle %x Sekunden
 
 tooltip.adamantine.armor=Reduziert genommenen Schaden
-tooltip.aquarium.armor=Volleständige Rüstung: Unterwasseratmung
-tooltip.coldiron.armor=Volleständige Rüstung: Feuerresistenz
+tooltip.aquarium.armor=Vollständige Rüstung: Unterwasseratmung
+tooltip.coldiron.armor=Vollständige Rüstung: Feuerresistenz
 tooltip.mithril.armor=Vollständige Rüstung: Schutz vor Vergiftung & Verdorren
 tooltip.starsteel.armor=Verringert dein Gewicht
-
 
 achievement.this_is_new=Das ist neu...
 achievement.blocktastic=Blocktastisch!
 achievement.geologist=Geologe
 achievement.brass_maker=Messing
 achievement.bronze_maker=Bronze
+achievement.cupronickel_maker=Kupfernickel
 achievement.electrum_maker=Elektrum
 achievement.steel_maker=Stahl
 achievement.invar_maker=Invar
@@ -408,23 +411,23 @@ achievement.aquarium_maker=Aquarium
 achievement.metallurgy=Metallurgie
 achievement.demon_slayer=Dämonentöter
 achievement.angel_of_death=Engel des Todes
-achievement.scuba_diver=Freiwasser-Taucher 
+achievement.scuba_diver=Freiwasser-Taucher
 achievement.juggernaut=Juggernaut
 achievement.moon_boots=Moon Walker
 achievement.this_is_new.desc=Schmelze ein neues Metall von der Grundmetalle Mod
 achievement.blocktastic.desc=Platziere einen Metallblock, der weder Eisen noch Gold ist
 achievement.geologist.desc=Mache einen Hammer aus einem Metallblock
-achievement.brass_maker.desc=Kombiniere Pulverisiertes Kupfer und Zink, um Messing herzustellen
-achievement.bronze_maker.desc=Kombiniere Pulverisiertes Kupfer und Zinn, um Bronze herzustellen
-achievement.electrum_maker.desc=Kombiniere Pulverisiertes Silber und Gold, um Elektrum herzustellen
-achievement.steel_maker.desc=Kombiniere Pulverisiertes Eisen und Pulverisiertes Holzkohle, um Stahl herzustellen
-achievement.invar_maker.desc=Kombiniere Pulverisiertes Eisen und Nickel, um Invar herzustellen
-achievement.mithril_maker.desc=Kombiniere Pulverisiertes Silber und Kalteisen, um Quecksilber herzustellen
-achievement.aquarium_maker.desc=Kombiniere Pulverisiertes Kupfer und Zink mit Prismarinkristallen, um Aquarium herzustellen
+achievement.brass_maker.desc=Kombiniere Pulverisiertes Kupfer und Pulverisiertes Zink, um Messing herzustellen
+achievement.bronze_maker.desc=Kombiniere Pulverisiertes Kupfer und Pulverisiertes Zinn, um Bronze herzustellen
+achievement.electrum_maker.desc=Kombiniere Pulverisiertes Silber und Pulverisiertes Gold, um Elektrum herzustellen
+achievement.steel_maker.desc=Kombiniere Pulverisiertes Eisen und Carbonstaub, um Stahl herzustellen
+achievement.invar_maker.desc=Kombiniere Pulverisiertes Eisen und Pulverisiertes Nickel, um Invar herzustellen
+achievement.mithril_maker.desc=Kombiniere Pulverisiertes Silber und Pulverisiertes Kalteisen, um Quecksilber herzustellen
+achievement.aquarium_maker.desc=Kombiniere Pulverisiertes Kupfer und Pulverisiertes Zink mit Prismarinkristallen, um Aquarium herzustellen
 achievement.metallurgy.desc=Stelle jede Legierungsmischung her
 achievement.demon_slayer.desc=Trage eine vollständige Kalteisenrüstung und führe ein Kalteisenschwert
 achievement.angel_of_death.desc=Trage eine vollständige Mithrilrüstung und führe ein Mithrilschwert
-achievement.scuba_diver.desc=Trage eine vollständige Aquariumrüstung und schwimmer unter Wasser
+achievement.scuba_diver.desc=Trage eine vollständige Aquariumrüstung und schwimme unter Wasser
 achievement.juggernaut.desc=Trage eine vollständige Adamantrüstung
 achievement.moon_boots.desc=Trage ein Paar Sternstahlstiefel
 
@@ -434,34 +437,35 @@ item.basemetals.wood_crackhammer.name=Holzbruchhammer
 item.basemetals.stone_crackhammer.name=Steinbruchhammer
 
 item.bucket.mercury=Quecksilbereimer
+tile.basemetals.liquid_mercury.name=Quecksilber
 
-
+tile.basemetals.human_detector.name=Sicherheitsdruckplatte
 item.basemetals.human_detector.name=Sicherheitsdruckplatte
 
-achievement.cupronickel_maker.desc=Kombinieren Sie pulverisiertem Kupfer und Nickel zu machen Kupfer-Nickel
+achievement.cupronickel_maker.desc=Kombiniere Pulverisiertes Kupfer und Pulverisiertes Nickel, um Kupfernickel herzustellen
 
-item.basemetals.cupronickel_axe.name=Kupfer-Nickelaxt
-item.basemetals.cupronickel_bars.name=Kupfer-Nickelgitter
-item.basemetals.cupronickel_blend.name=Kupfer-Nickelmischung
-item.basemetals.cupronickel_block.name=Kupfer-Nickelblock
-item.basemetals.cupronickel_boots.name=Kupfer-Nickelstiefel
-item.basemetals.cupronickel_chestplate.name=Kupfer-Nickelbrustpanzer
-item.basemetals.cupronickel_crackhammer.name=Kupfer-Nickelbruchhammer
-item.basemetals.cupronickel_door.name=Kupfer-Nickeltür
-item.basemetals.cupronickel_helmet.name=Kupfer-Nickelhelm
-item.basemetals.cupronickel_hoe.name=Kupfer-Nickelhacke
-item.basemetals.cupronickel_ingot.name=Kupfer-Nickelbarren
-item.basemetals.cupronickel_leggings.name=Kupfer-Nickelbeinschutz
-item.basemetals.cupronickel_nugget.name=Kupfer-Nickelklumpen
-item.basemetals.cupronickel_pickaxe.name=Kupfer-Nickelspitzhacke
-item.basemetals.cupronickel_powder.name=Pulverisierter Kupfer-Nickel
-item.basemetals.cupronickel_shovel.name=Kupfer-Nickelschaufel
-item.basemetals.cupronickel_sword.name=Kupfer-Nickelschwert
-item.basemetals.cupronickel_trapdoor.name=Kupfer-Nickelfalltür
-tile.basemetals.cupronickel_bars.name=Kupfer-Nickelgitter
-tile.basemetals.cupronickel_block.name=Kupfer-Nickelblock
-tile.basemetals.cupronickel_door.name=Kupfer-Nickeltür
-tile.basemetals.cupronickel_trapdoor.name=Kupfer-Nickelfalltür
+item.basemetals.cupronickel_axe.name=Kupfernickelaxt
+item.basemetals.cupronickel_bars.name=Kupfernickelgitter
+item.basemetals.cupronickel_blend.name=Kupfernickelmischung
+item.basemetals.cupronickel_block.name=Kupfernickelblock
+item.basemetals.cupronickel_boots.name=Kupfernickelstiefel
+item.basemetals.cupronickel_chestplate.name=Kupfernickelbrustpanzer
+item.basemetals.cupronickel_crackhammer.name=Kupfernickelbruchhammer
+item.basemetals.cupronickel_door.name=Kupfernickeltür
+item.basemetals.cupronickel_helmet.name=Kupfernickelhelm
+item.basemetals.cupronickel_hoe.name=Kupfernickelhacke
+item.basemetals.cupronickel_ingot.name=Kupfernickelbarren
+item.basemetals.cupronickel_leggings.name=Kupfernickelbeinschutz
+item.basemetals.cupronickel_nugget.name=Kupfernickelklumpen
+item.basemetals.cupronickel_pickaxe.name=Kupfernickelspitzhacke
+item.basemetals.cupronickel_powder.name=Pulverisiertes Kupfernickel
+item.basemetals.cupronickel_shovel.name=Kupfernickelschaufel
+item.basemetals.cupronickel_sword.name=Kupfernickelschwert
+item.basemetals.cupronickel_trapdoor.name=Kupfernickelfalltür
+tile.basemetals.cupronickel_bars.name=Kupfernickelgitter
+tile.basemetals.cupronickel_block.name=Kupfernickelblock
+tile.basemetals.cupronickel_door.name=Kupfernickeltür
+tile.basemetals.cupronickel_trapdoor.name=Kupfernickelfalltür
 
 item.basemetals.platinum_axe.name=Platinaxt
 item.basemetals.platinum_bars.name=Platingitter
@@ -477,7 +481,7 @@ item.basemetals.platinum_leggings.name=Platinbeinschutz
 item.basemetals.platinum_nugget.name=Platinklumpen
 item.basemetals.platinum_ore.name=Platinerz
 item.basemetals.platinum_pickaxe.name=Platinspitzhacke
-item.basemetals.platinum_powder.name=Pulverisierter Platin
+item.basemetals.platinum_powder.name=Pulverisiertes Platin
 item.basemetals.platinum_shovel.name=Platinschaufel
 item.basemetals.platinum_sword.name=Platinschwert
 item.basemetals.platinum_trapdoor.name=Platinfalltür
@@ -487,44 +491,44 @@ tile.basemetals.platinum_door.name=Platintür
 tile.basemetals.platinum_ore.name=Platinerz
 tile.basemetals.platinum_trapdoor.name=Platinfalltür
 
-item.basemetals.adamantine_rod.name=Adamantstab
-item.basemetals.aquarium_rod.name=Aquariumstab
-item.basemetals.brass_rod.name=Messingstab
-item.basemetals.bronze_rod.name=Bronzstab
-item.basemetals.coldiron_rod.name=Kalteisenstab
-item.basemetals.copper_rod.name=Kupferstab
-item.basemetals.cupronickel_rod.name=Kupfer-Nickelstab
-item.basemetals.electrum_rod.name=Elektrumstab
-item.basemetals.gold_rod.name=Goldstab
-item.basemetals.invar_rod.name=Invarstab
-item.basemetals.iron_rod.name=Eisenstab
-item.basemetals.lead_rod.name=Bleistab
-item.basemetals.mithril_rod.name=Mithrilstab
-item.basemetals.nickel_rod.name=Nickelstab
-item.basemetals.platinum_rod.name=Platinstab
-item.basemetals.silver_rod.name=Silberstab
-item.basemetals.starsteel_rod.name=Sternstahlstab
-item.basemetals.steel_rod.name=Stahlstab
-item.basemetals.tin_rod.name=Zinnstab
-item.basemetals.zinc_rod.name=Zinkstab
+item.basemetals.adamantine_rod.name=Adamantrute
+item.basemetals.aquarium_rod.name=Aquariumrute
+item.basemetals.brass_rod.name=Messingrute
+item.basemetals.bronze_rod.name=Bronzerute
+item.basemetals.coldiron_rod.name=Kalteisenrute
+item.basemetals.copper_rod.name=Kupferrute
+item.basemetals.cupronickel_rod.name=Kupfernickelrute
+item.basemetals.electrum_rod.name=Elektrumrute
+item.basemetals.gold_rod.name=Goldrute
+item.basemetals.invar_rod.name=Invarrute
+item.basemetals.iron_rod.name=Eisenrute
+item.basemetals.lead_rod.name=Bleirute
+item.basemetals.mithril_rod.name=Mithrilrute
+item.basemetals.nickel_rod.name=Nickelrute
+item.basemetals.platinum_rod.name=Platinrute
+item.basemetals.silver_rod.name=Silberrute
+item.basemetals.starsteel_rod.name=Sternstahlrute
+item.basemetals.steel_rod.name=Stahlrute
+item.basemetals.tin_rod.name=Zinnrute
+item.basemetals.zinc_rod.name=Zinkrute
 
-item.basemetals.adamantine_gear.name=Adamantgetriebe
-item.basemetals.aquarium_gear.name=Aquariumgetriebe
-item.basemetals.brass_gear.name=Messinggetriebe
-item.basemetals.bronze_gear.name=Bronzgetriebe
-item.basemetals.coldiron_gear.name=Kalteisengetriebe
-item.basemetals.copper_gear.name=Kupfergetriebe
-item.basemetals.cupronickel_gear.name=Kupfer-Nickelgetriebe
-item.basemetals.electrum_gear.name=Elektrumgetriebe
-item.basemetals.gold_gear.name=Goldgetriebe
-item.basemetals.invar_gear.name=Invargetriebe
-item.basemetals.iron_gear.name=Eisengetriebe
-item.basemetals.lead_gear.name=Bleigetriebe
-item.basemetals.mithril_gear.name=Mithrilgetriebe
-item.basemetals.nickel_gear.name=Nickelgetriebe
-item.basemetals.platinum_gear.name=Platingetriebe
-item.basemetals.silver_gear.name=Silbergetriebe
-item.basemetals.starsteel_gear.name=Sternstahlgetriebe
-item.basemetals.steel_gear.name=Stahlgetriebe
-item.basemetals.tin_gear.name=Zinngetriebe
-item.basemetals.zinc_gear.name=Zinkgetriebe
+item.basemetals.adamantine_gear.name=Adamantzahnrad
+item.basemetals.aquarium_gear.name=Aquariumzahnrad
+item.basemetals.brass_gear.name=Messingzahnrad
+item.basemetals.bronze_gear.name=Bronzezahnrad
+item.basemetals.coldiron_gear.name=Kalteisenzahnrad
+item.basemetals.copper_gear.name=Kupferzahnrad
+item.basemetals.cupronickel_gear.name=Kupfernickelzahnrad
+item.basemetals.electrum_gear.name=Elektrumzahnrad
+item.basemetals.gold_gear.name=Goldzahnrad
+item.basemetals.invar_gear.name=Invarzahnrad
+item.basemetals.iron_gear.name=Eisenzahnrad
+item.basemetals.lead_gear.name=Bleizahnrad
+item.basemetals.mithril_gear.name=Mithrilzahnrad
+item.basemetals.nickel_gear.name=Nickelzahnrad
+item.basemetals.platinum_gear.name=Platinzahnrad
+item.basemetals.silver_gear.name=Silberzahnrad
+item.basemetals.starsteel_gear.name=Sternstahlzahnrad
+item.basemetals.steel_gear.name=Stahlzahnrad
+item.basemetals.tin_gear.name=Zinnzahnrad
+item.basemetals.zinc_gear.name=Zinkzahnrad
