--- a/src/main/resources/assets/basemetals/lang/en_AU.lang
+++ b/src/main/resources/assets/basemetals/lang/en_AU.lang
@@ -434,6 +434,7 @@ item.basemetals.wood_crackhammer.name=Wooden Crack Hammer
 item.basemetals.stone_crackhammer.name=Stone Crack Hammer
 
 item.bucket.mercury=Bucket of Mercury
+fluid.basemetals.mercury=Mercury
 
 item.basemetals.human_detector.name=Security Pressure Plate
 
